3.10.0/_sources/gallery/mplot3d/custom_shaded_3d_surface.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/mplot3d/custom_shaded_3d_surface.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_mplot3d_custom_shaded_3d_surface.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_mplot3d_custom_shaded_3d_surface.py:


=======================================
Custom hillshading in a 3D surface plot
=======================================

Demonstrates using custom hillshading in a 3D surface plot.

.. GENERATED FROM PYTHON SOURCE LINES 8-38

.. code-block:: Python


    import matplotlib.pyplot as plt
    import numpy as np

    from matplotlib import cbook, cm
    from matplotlib.colors import LightSource

    # Load and format data
    dem = cbook.get_sample_data('jacksboro_fault_dem.npz')
    z = dem['elevation']
    nrows, ncols = z.shape
    x = np.linspace(dem['xmin'], dem['xmax'], ncols)
    y = np.linspace(dem['ymin'], dem['ymax'], nrows)
    x, y = np.meshgrid(x, y)

    region = np.s_[5:50, 5:50]
    x, y, z = x[region], y[region], z[region]

    # Set up plot
    fig, ax = plt.subplots(subplot_kw=dict(projection='3d'))

    ls = LightSource(270, 45)
    # To use a custom hillshading mode, override the built-in shading and pass
    # in the rgb colors of the shaded surface calculated from "shade".
    rgb = ls.shade(z, cmap=cm.gist_earth, vert_exag=0.1, blend_mode='soft')
    surf = ax.plot_surface(x, y, z, rstride=1, cstride=1, facecolors=rgb,
                           linewidth=0, antialiased=False, shade=False)

    plt.show()




.. image-sg:: /gallery/mplot3d/images/sphx_glr_custom_shaded_3d_surface_001.png
   :alt: custom shaded 3d surface
   :srcset: /gallery/mplot3d/images/sphx_glr_custom_shaded_3d_surface_001.png, /gallery/mplot3d/images/sphx_glr_custom_shaded_3d_surface_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 39-43

.. tags::
   plot-type: 3D,
   level: intermediate,
   domain: cartography


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.953 seconds)


.. _sphx_glr_download_gallery_mplot3d_custom_shaded_3d_surface.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: custom_shaded_3d_surface.ipynb <custom_shaded_3d_surface.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: custom_shaded_3d_surface.py <custom_shaded_3d_surface.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: custom_shaded_3d_surface.zip <custom_shaded_3d_surface.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
